# OnnxEditor

./: .bazelrc  .gitignore  BUILD  CMakeLists.txt  CPPLINT.cfg  README.md  WORKSPACE  context.cpp  context.h  graphedge.cpp  graphscene.cpp  graphscene.h  graphview.cpp  graphview.h  graphview.hpp  logger.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  onnx.BUILD
.docker/: qt5.DockerFile
.github/workflows/: qt5-release.yml
graph/: BUILD  CMakeLists.txt  context.cpp  context.hpp  graphedge.cpp  graphedge.h  graphedge.hpp  graphnode.cpp  graphnode.h  graphnode.hpp  graphscene.cpp  graphscene.hpp  graphview.cpp  graphview.hpp
layout/: BUILD  CMakeLists.txt  common.h  layout.cpp  layout.hpp  ogdf_layout.cpp  ogdf_layout.h  ogdf_layout.hpp
parser/: BUILD  CMakeLists.txt  context.h  context.hpp  parser.cpp  parser.h  parser.hpp  utils.h  utils.hpp
